...
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/popup_wardrobe_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/editText_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/add_description"
        android:textSize="6pt"
        android:layout_below="@+id/add_description_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <Spinner android:id="@+id/wardrobe_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/wardrobe_array"
        android:prompt="@string/wardrobe_array_prompt"
        android:layout_below="@+id/editText_add_item" />

...
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="3dp"
        android:src="@drawable/shirt_blue"
        android:onClick="selectShirt"
        android:layout_marginTop="18dp"
        android:id="@+id/blueShirtButton"
        android:layout_below="@+id/select_image_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="3dp"
        android:src="@drawable/shirt_white"
        android:onClick="selectShirt"
        android:id="@+id/whiteShirtButton"
        android:layout_alignTop="@+id/blueShirtButton"
        android:layout_toRightOf="@+id/blueShirtButton"
        android:layout_toEndOf="@+id/blueShirtButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="3dp"
        android:src="@drawable/shirt_striped"
        android:onClick="selectShirt"
        android:id="@+id/stripedShirtButton"
        android:layout_alignTop="@+id/whiteShirtButton"
        android:layout_toRightOf="@+id/whiteShirtButton"
        android:layout_toEndOf="@+id/whiteShirtButton" />

    <ImageButton
        android:layout_width="wrap_content"
...
        android:id="@+id/spottedShirtButton"
        android:layout_alignTop="@+id/squaredShirtButton"
        android:layout_toRightOf="@+id/squaredShirtButton"
        android:layout_toEndOf="@+id/squaredShirtButton" />

    <Button
        android:id="@+id/galleryButton"
        android:onClick="getFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/khakiTrouserstButton"
        android:layout_marginTop="30dp"
        android:text="Gallery" />

    <Button
        android:id="@+id/photoButton"
        android:onClick="takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/galleryButton"
        android:layout_toEndOf="@+id/blueTrouserstButton"
        android:layout_toRightOf="@+id/blueTrouserstButton"
        android:text="Take photo" />

    <ImageButton
        android:id="@+id/galleryImageButton"
        android:onClick="selectFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/galleryButton"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/blueTrouserstButton"
        android:layout_toStartOf="@+id/blueTrouserstButton" />
    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="addWardrobeItem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
...
