...
                android:text="@string/upper_body"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="28dp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/upper_body_pager"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">
            </android.support.v4.view.ViewPager>

            <TextView
                android:id="@+id/lowerBodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_body"
                android:layout_below="@+id/button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="28dp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/lower_body_pager"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
            </android.support.v4.view.ViewPager>

            <TextView
...
                android:layout_below="@+id/button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="28dp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/footwear_pager"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">
            </android.support.v4.view.ViewPager>
        </LinearLayout>

...
