...
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jonatan.clothesplanner.WeeklyPlanFragment">

    <LinearLayout
        android:id="@+id/weekly_plan_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:weightSum="1">

...
            android:layout_marginTop="28dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mondayViewGroup"
            android:visibility="invisible"
            android:layout_weight="0.01">
        </LinearLayout>

        <TextView
            android:text="Tuesday"
...
            android:id="@+id/tuesdayText"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuesdayViewGroup"
            android:weightSum="1"
            android:visibility="invisible"
            android:layout_weight="0.03">
        </LinearLayout>

        <TextView
...
            android:id="@+id/fridayText"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fridayViewGroup"
            android:weightSum="1"
            android:visibility="invisible">
        </LinearLayout>

        <Button
            android:text="Generate"
...
