<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_wardrobe"
        android:icon="@mipmap/wardrobe_icon"
        android:title="@string/wardrobe"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_weekly_plan"
        android:icon="@mipmap/weekly_plan_icon"
        android:title="@string/weekly_plan"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
...
